server-elm-style.css
/* ... */
div#context-menu .context-menu-button.inert:hover, div#modify-menu .modify-menu-button.inert:hover:not(.disabled) {
    background: var(--context-button-color-inert-hover)
}

div#modify-menu div.keyvalues>div.keyvalue #applyNewTagName {
    display: none;
}

div#modify-menu div.keyvalues>div.keyvalue #applyNewTagName.visible {
    display: flex;
    width: var(--context-menu-button-width);
    padding: 4px;
}
div#modify-menu div.keyvalues>div.keyvalue #newTagName {
    background: none;
    color: white;
}

div#modify-menu div.keyvalues>div.keyvalue #newTagName:focus {
    background: white;
    color: initial;
}


div#modify-menu div.keyvalues>div.keyvalue #applyNewTagName + div#newtagname-align-placeholder {
  display: flex;
  width: calc(var(--context-menu-button-width) - 8px);
  padding: 4px;
  margin: 2px;
  border-radius: 4px;
  border-width: 2px;
}

div#modify-menu div.keyvalues>div.keyvalue #applyNewTagName.visible + div#newtagname-align-placeholder {
  display: none;
}

textarea#singleChildNodeContent {
  width: 100%;
  height: 100px;
  border-radius: 0.4em;
  border: 0;
  margin-top: 6px;
  padding: 10px;
  color: black;
  resize: vertical;
  min-height: 50px;
  font-size: 0.8rem;
}

textarea.templateengine {
    width: 100%;
    height: 100%;
    color: black;
    border-radius: 0.4rem;
    border: 0;
    padding: 0.4rem;
    font: normal 0.84rem Consolas, Monaco, monospace;
    resize: none;
    opacity: 0.8;
}

textarea.templateengine:focus {
    outline: none;
    opacity: 1;
}

#modify-menu span.insertOption label {
  display: inline-block;
}


.to-be-selected {
    animation: OrangeWait 3s linear infinite;
    background: linear-gradient(90deg, orange 0%, gold 5%, gold 10%, orange 15%) !important;
    background-size: 200% 100% !important;
}

@keyframes OrangeWait { 
    0% { 
      background-position: 30% 0%;
    }
    30%, 100% {
      background-position: -100% 0%;
    }
}

div.editor-container {
  margin-top: 3px;
}

div.editor-container-title > div.expand-menu {
  float: left;
  line-height: 30px;
  padding-left: 6px;
}
div.editor-container:first-of-type div.arrowup, div.editor-container:last-of-type div.arrowdown {
  visibility: hidden;
}
div.editor-container.minimized div.editor-container-content {
  display: none;
}
div.editor-container.disabled div.editor-container-title {
  color: #BBB;
}
div.editor-container:not(.disabled):hover {
  -webkit-filter: contrast(125%);
    /* Chrome, Opera */
    -moz-filter: blur(125%);
    -ms-filter: blur(125%);
    filter: blur(125%);
}

div.editor-container div.editor-container-title div.editor-container-icon svg.context-menu-icon.fill>path {
  fill: #BBB;
  stroke-width: 0px;
}
div.editor-container div.editor-container-title div.editor-container-icon:hover svg.context-menu-icon.fill>path {
  fill: white;
}
div.editor-container-title {
  border-radius: 0.2rem;
  height: 30px;
  background-color: var(--context-editor-container-title);
  cursor: pointer;
  font-family: Montserrat,'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: bold;
}

div.editor-container-content {
  padding: 6px;
  padding: 6px;
  max-height: 80%;
  overflow-y: auto;
}

div.editor-container div.editor-container-title div.editor-container-icon {
  float: right;
  margin-top: 5px;
}
div.editor-container.minimized div.editor-container-title div.editor-container-icon#displayArrow {
  transform: rotate(180deg);
  transform-origin: 50% 50%;
}

@media (pointer: coarse) {
    div#modify-menu {
        -webkit-box-shadow: none;
        -moz-box-shadow: none;
        box-shadow: none;
        /* font-size: 48px; */
        bottom: 0px;
        left: 0px;
        top: initial;
        right: initial;
        height: 40%;
        width: 100%;
        min-height: 350px;
        transform: translate(0px, 100%);
        padding: 0;
        padding-bottom: 80px;
    }
    div#modify-menu>div.modify-menu-icons.pinned {
        width: auto;
        height: var(--context-menu-height);
        position: absolute;
        top: calc(0px - var(--context-menu-height));
        left: 0px;
    }
    div#modify-menu>div.modify-menu-icons.pinned span.modify-menu-icon-label {
        display: none;
    }
    div#modify-menu>div.modify-menu-icons.pinned >div.modify-menu-button {
        height: 50px;
    }
    div#modify-menu>div.modify-menu-icons.pinned svg {
        height: 50px;
    }
    div.bottom-placeholder {
        width: 100%;
        height: 30%;
    }
    :root {
        --context-menu-height: 48px;
        --context-menu-button-width: 48px;
        --context-menu-padding-top: 9px;
        --context-menu-padding-left: 4px;
    }
    /* mobile dom selector */
    div.dom-selector-style {
        height: 30%;
        margin: 0.15em;
        border-radius: 0.4em;
        margin: 2%;
    }
    div.elementAttr {
        display: none;
    }
    div.mainElem {
        margin-bottom: 0;
        height: 56%;
    }
    div.childrenSelector {
        font-size: 1.2em;
    }
    div.no-sibling {
        font-size: 1em;
    }
    /* mobile modify menu */
    div.tagname-summary {
        padding-left: 10px;
    }
    div.information {
        margin: 2%;
        margin-top: 0;
        height: 215px;
        overflow-y: auto;
    }
    div.information>textarea {
        font-size: 1.2em;
        border-radius: 0.3em;
        border: none;
        padding: 1.5%;
    }
    textarea.templateengine {
        width: 100%;
        height: 100%;
        color: black;
        font-size: 1.4rem;
        border-radius: 0.4rem;
        border: 0;
        padding: 0.4rem;
    }
    div.insert-information-style {
        max-height: 400px;
        height: 400px;
    }
    div.insert-information-style>h1 {
        margin: 0;
    }
}

